Added some endpoints for managing book series
