# src/main/java/dev/rishab/library/resource/impl/BooksResourceImpl.java
@@ -16,25 +16,22 @@
 
 package dev.rishab.library.resource.impl;
 
-import java.net.URI;
 import java.util.List;
 
 import javax.inject.Inject;
 import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Response;
 import javax.ws.rs.core.UriInfo;
 
 import dev.rishab.library.beans.Book;
 import dev.rishab.library.resource.BooksResource;
-import dev.rishab.library.service.BookService;
+import dev.rishab.library.service.LibraryService;
 
-/**
- * @author eric.wittmann@gmail.com
- */
 public class BooksResourceImpl implements BooksResource {
 
 	@Inject
-	BookService bookService;
+	LibraryService bookService;
+	
+	@Context UriInfo uriInfo;
 
 	/**
 	 * @see dev.rishab.library.resource.BooksResource#listBooks()
@@ -45,15 +42,14 @@ public class BooksResourceImpl implements BooksResource {
 	}
 
 	/**
-	 * @return
 	 * @see dev.rishab.library.resource.BooksResource#addBook(dev.rishab.library.beans.Book)
 	 */
 	@Override
-	public Response addBook(Book data, @Context UriInfo uriInfo) {
+	public Book addBook(Book data) {
 		Book book = bookService.addBook(data);
-		URI uri = uriInfo.getAbsolutePathBuilder().path(book.getIsbn()).build();
-		return Response.created(uri).entity(book).build();
-
+		return book;
+//		URI uri = uriInfo.getAbsolutePathBuilder().path(book.getIsbn()).build();
+//		return Response.created(uri).entity(book).build();
 	}
 
 	/**
@@ -65,15 +61,13 @@ public class BooksResourceImpl implements BooksResource {
 	}
 
 	/**
-	 * @return
 	 * @see dev.rishab.library.resource.BooksResource#updateBook(java.lang.String,
 	 *      dev.rishab.library.beans.Book)
 	 */
 	@Override
-	public Book updateBook(String bookId, Book data) {
+	public void updateBook(String bookId, Book data) {
 		data.setIsbn(bookId);
-		return bookService.updateBook(data);
-
+		bookService.updateBook(data);
 	}
 
 	/**
