# src/main/java/dev/rishab/library/resource/impl/SeriesResourceImpl.java
@@ -1,0 +1,82 @@
+/*
+ * Copyright 2021 JBoss Inc
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package dev.rishab.library.resource.impl;
+
+import java.util.List;
+
+import javax.inject.Inject;
+
+import dev.rishab.library.beans.AddSeries;
+import dev.rishab.library.beans.Book;
+import dev.rishab.library.beans.Series;
+import dev.rishab.library.resource.SeriesResource;
+import dev.rishab.library.service.LibraryService;
+
+/**
+ * @author eric.wittmann@gmail.com
+ */
+public class SeriesResourceImpl implements SeriesResource {
+
+	@Inject
+	LibraryService LibraryService;
+
+    /**
+     * @see dev.rishab.library.resource.SeriesResource#listSeries()
+     */
+    @Override
+    public List<Series> listSeries() {
+        // TODO Auto-generated method stub
+        return null;
+    }
+
+    /**
+     * @see dev.rishab.library.resource.SeriesResource#addSeries(dev.rishab.library.beans.AddSeries)
+     */
+    @Override
+    public Series addSeries(AddSeries data) {
+        // TODO Auto-generated method stub
+        return null;
+    }
+
+    /**
+     * @see dev.rishab.library.resource.SeriesResource#getSeries(int)
+     */
+    @Override
+    public Series getSeries(int seriesId) {
+        // TODO Auto-generated method stub
+        return null;
+    }
+
+    /**
+     * @see dev.rishab.library.resource.SeriesResource#deleteSeries(int)
+     */
+    @Override
+    public void deleteSeries(int seriesId) {
+        // TODO Auto-generated method stub
+        
+    }
+
+    /**
+     * @see dev.rishab.library.resource.SeriesResource#getBooksInSeries(int)
+     */
+    @Override
+    public List<Book> getBooksInSeries(int seriesId) {
+        // TODO Auto-generated method stub
+        return null;
+    }
+
+}
